@@ -1,3 +1,8 @@
+2007-02-22  Donald E. Curtis <dcurtis3@sourceforge.net>
+
+	* src/mol.cpp: Added SetParent call to NewBond function.  Should resolve
+	segfault issues related to bug 1665519.
+
 2007-02-21  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/mol.cpp (NewBond): Fix PR#1665649. Make sure to set the
